fix: pinpointed database and edited security configurations